force-app/main/default/objects/Form_Data__c/Form_Data__c.object-meta.xml
<CustomObject>
    <description>TO BE DEPRECATED:
Form Data was used to store all the input values related  to the ElixirSuite__Form__c. One record in this object is one input value entered by user in the form.</description>
    <label>Form Data</label>
    <nameField>
        <label>Form Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>