force-app/main/default/objects/Form_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form data</relationshipLabel>
    <relationshipName>Form_data</relationshipName>
    <type>Lookup</type>
</CustomField>