force-app/main/default/objects/Form_Data__c/fields/Approval_Level_s__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_s__c</fullName>
    <label>Approval Level(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>