force-app/main/default/objects/Form_Data__c/fields/Approval_Values__c.field-meta.xml
<CustomField>
    <fullName>Approval_Values__c</fullName>
    <label>Approval Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>