force-app/main/default/objects/Form_Data__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form data</relationshipLabel>
    <relationshipName>Form_data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>