force-app/main/default/objects/Form_Data__c/fields/Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Form_Field__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form Field</label>
    <referenceTo>Form_Field__c</referenceTo>
    <relationshipLabel>Form data</relationshipLabel>
    <relationshipName>Form_data</relationshipName>
    <type>Lookup</type>
</CustomField>