force-app/main/default/objects/Form_Data__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <label>Text Area</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>